[package]
name = "lmake_md_to_doc_comments"
version = "0.5.4"
authors = ["Luciano Bestia <luciano.bestia@gmail.com>"]
edition = "2018"
description = "Includes segments of md files into rs files as doc comments."
repository = "https://github.com/LucianoBestia/lmake_md_to_doc_comments"
readme = "README.md"
license = "MIT"
keywords = ["rust", "make"]
categories = ["development-tools::build-utils"]
# publish as a cargo tool. Only this files.
publish = true
include = [
    "Cargo.toml",
    "LICENSE",
    "README.md",
    "src/*",
]

[dependencies]
unwrap = "1.2.1"
clap = "2.33.1"
ansi_term = "0.12.1"
glob = "0.3.0"
regex = "1.3.9"
lazy_static="1.4.0"

